@@ -4,7 +4,7 @@
 # $Id$
 #
 
-LIB_SRCS := arc4random.c bsd_getopt.c err.c fgetln.c inet_net_pton.c \
+LIB_SRCS := arc4random.c bsd_getopt.c err.c fgetln.c heapsort.c inet_net_pton.c \
 	    strlcat.c strlcpy.c md5c.c fmtcheck.c progname.c vis.c unvis.c
 LIB_SRCS := $(patsubst %,src/%,$(LIB_SRCS))
 
