@@ -8,4 +8,6 @@ const char *fmtcheck (const char *, const char *);
 char *getprogname ();
 void setprogname (char *);
 
+int heapsort (void *, size_t, size_t, int (*)(const void *, const void *));
+
 #endif
